[package]
name = "ser_bytes"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^2.0.50", features = ["full"] }
quote = "^1.0.35"
proc-macro2 = "^1.0"

ser_bytes_aux = { path = "../ser_bytes_aux" }

#defmt = "^0.3.5" # todo temp